[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/godiva-reguler.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenuBackground" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.439216, 0.431373, 0.321569, 1 )

[node name="MainMenuVBox" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="TitleMargin" type="MarginContainer" parent="MainMenuVBox"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 80

[node name="Title" type="Label" parent="MainMenuVBox/TitleMargin"]
margin_top = 97.0
margin_right = 1280.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 3 )
text = "Super Trunfo
Sustentabilidade"
align = 1
autowrap = true

[node name="OptionMargin" type="MarginContainer" parent="MainMenuVBox"]
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionButtons" type="VBoxContainer" parent="MainMenuVBox/OptionMargin"]
margin_right = 1280.0
margin_bottom = 358.0
custom_constants/separation = 30
alignment = 1

[node name="StartMargin" type="MarginContainer" parent="MainMenuVBox/OptionMargin/OptionButtons"]
margin_left = 582.0
margin_top = 89.0
margin_right = 698.0
margin_bottom = 129.0
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="MainMenuVBox/OptionMargin/OptionButtons/StartMargin"]
margin_right = 116.0
margin_bottom = 40.0
custom_colors/font_color_hover = Color( 0.952941, 0.796078, 0.423529, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.686275, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Iniciar"

[node name="OptionsMargin" type="MarginContainer" parent="MainMenuVBox/OptionMargin/OptionButtons"]
margin_left = 581.0
margin_top = 159.0
margin_right = 699.0
margin_bottom = 199.0
size_flags_horizontal = 4

[node name="OptionsButton" type="Button" parent="MainMenuVBox/OptionMargin/OptionButtons/OptionsMargin"]
margin_right = 118.0
margin_bottom = 40.0
custom_colors/font_color_hover = Color( 0.952941, 0.796078, 0.423529, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.686275, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Opções"

[node name="ExitMargin" type="MarginContainer" parent="MainMenuVBox/OptionMargin/OptionButtons"]
margin_left = 604.0
margin_top = 229.0
margin_right = 676.0
margin_bottom = 269.0
size_flags_horizontal = 4

[node name="ExitButton" type="Button" parent="MainMenuVBox/OptionMargin/OptionButtons/ExitMargin"]
margin_right = 72.0
margin_bottom = 40.0
custom_colors/font_color_hover = Color( 0.952941, 0.796078, 0.423529, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.686275, 0.345098, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Sair"

[connection signal="pressed" from="MainMenuVBox/OptionMargin/OptionButtons/StartMargin/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenuVBox/OptionMargin/OptionButtons/OptionsMargin/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenuVBox/OptionMargin/OptionButtons/ExitMargin/ExitButton" to="." method="_on_ExitButton_pressed"]
